--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,161 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ #Navbar >ul{
+    justify-content: center;
+    align-items: center;
+    height: 100vh;   
+  } 
+  *{
+    background-color:black;
+  }
+  #Navbar{
+    position: fixed;
+    width: 16.7%;
+    font-size: 24px;
+  }
+  #Navbar > ul > li{
+    cursor: pointer;
+    padding-top: 30px;
+    font-size: 20px;
+  }
+  #Navbar > ul > li:hover{
+    text-shadow: #FC0 1px 0 10px;
+  }
+  #body{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+  }
+  #img{
+    width: 240px;
+    height: 140px;
+  }
+  #description{
+    opacity: 80%;
+    font-size: small;
+    color: white;
+  }
+  #article{
+    font-weight: bold;
+    color: white;
+  }
+  /* #card{
+    width: 240px;
+    height: 320px;
+    border: 1px solid black;
+    cursor: pointer;
+     overflow: hidden; 
+    display: flex;
+    flex-wrap: wrap;
+  } */
+  #card {
+    width: calc(30% - 16px); /* Adjust the card width for responsiveness */
+    margin: 8px; /* Add margin to create spacing between cards */
+    border: 1px solid black;
+    cursor: pointer;
+    display: flex;
+    /* /flex-direction: column; Adjust the layout to column direction */
+    flex-wrap: wrap;
+    border: 1px solid white;
+  }
+  #card:hover{
+    opacity: 50%;
+  }
+  #img {
+    width: 100%;
+    height: 140px;
+  }
+  #card > a{
+    text-decoration: none;
+    color: black;
+  }
+
+  @media (max-width: 768px) {
+    #Navbar > ul {
+        height: auto; 
+    }
+    
+    #Navbar {
+        position: static; 
+    }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (max-width: 468px) {
+  #card {
+      width: 100%; 
+  }
+  #img{
+    width: 100%;
+  }
+}
+#header{
+  background-color: black;
+  color: white;
+  margin: 0;
+}
+ #headerlist{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+} 
+#headerlist >li {
+  cursor: pointer;
+}
+#flex{
+  display: flex;
+  align-items: center;
+  background-color: black;
+}
+.search{
+  flex: 1;
+  margin-right: 5px;
+}
+.search-button{
+  margin-bottom: 6px;
+}
+.weather-container {
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  color: white;
+  margin-left: -12px;
+}
+#weatherdiv{
+  margin: 0;
+}
+#twitterbody {
+  background-color: black;
+  padding-top: 8px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* This will evenly distribute the cards */
+  height: 240px;
+  color: white;
+}
+
+#twittercard {
+  width: calc(20% - 10px); /* Adjusted width with margin */
+  height: 180px;
+  margin-bottom: 10px; /* Add margin between cards */
+  padding-bottom: 8px;
+}
+#twittercard:hover{
+  box-shadow:0 0 10px rgba(0, 0, 0, 0.1);
+}
+#twitterimg {
+  width: 50%; /* Set the width to 100% to maintain aspect ratio */
+  height: 100px; /* Allow the height to adjust proportionally */
+  border-radius: 50%;
+}
+#fotter{
+  height: 50px;
+  width: 100%;
+  background-color: black;
+  position: fixed;
+  bottom: 0;
+  padding-top: 8px;
+  color: white;
+}
+#showmore{
+  background-color: black;
 }
